feat: Migration complète vers @clack/prompts
🎨 Interface moderne sans messages anglais
- Remplacement complet d'inquirer par @clack/prompts
- Interface visuelle plus élégante et moderne
- Zéro message en anglais (Use arrow keys, etc.)
- Meilleure UX avec hints et labels clairs

🔧 Fichiers modifiés
- src/core/questions-v2.js : Réécriture complète avec API @clack/prompts
  - p.text() pour les inputs texte
  - p.select() pour les choix uniques
  - p.multiselect() pour les choix multiples
  - p.password() pour les mots de passe
  - p.confirm() pour les confirmations
  - p.spinner() pour l'animation finale
  - Gestion native du Ctrl+C avec p.isCancel()

- src/core/summary.js : Conversion vers @clack/prompts
  - Confirmation finale avec p.confirm()
  - Menu de choix avec p.select()
  - Gestion des annulations

- package.json : Dépendances mises à jour
  - ➖ inquirer@9.2.12
  - ➕ @clack/prompts@1.0.0

✅ Tests
- CLI démarre correctement
- Affichage du logo ASCII
- Questions interactives fonctionnelles
- Aucun message en anglais résiduel
- Gestion native des annulations (Ctrl+C)

📝 Note
Cette migration résout définitivement le problème des messages d'aide en anglais
qui ne pouvaient pas être supprimés avec inquirer sans casser le rendu.

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "author": "Jerome",
   "license": "MIT",
   "dependencies": {
+    "@clack/prompts": "^1.0.0",
     "chalk": "^5.3.0",
     "figures": "^6.1.0",
-    "inquirer": "^9.2.12",
     "nanoid": "^5.0.4",
     "ora": "^8.0.1"
   },
